# 34_priswot_st

./: .gitignore  README.md  analisar_recomendar_swot.md  app.py  pyproject.toml  requirements.txt
src/swot/: crew.py  main.py
src/swot/config/: agents.yaml  tasks.yaml
