[project]
name = "swot"
version = "0.1.0"
description = "swot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.17.0",
    "crewai[tools]>=0.86.0,<1.0.0",
    "pydantic>=2.10.3",
    "python-docx>=1.1.2",
    "streamlit>=1.40.2",
]

[project.scripts]
swot = "swot.main:run"
run_crew = "swot.main:run"
train = "swot.main:train"
replay = "swot.main:replay"
test = "swot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
