[project]
name = "swot"
version = "0.1.0"
description = "swot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "crewai-tools==0.12.1",
    "crewai[tools]==0.61.0",
    "hatch>=1.13.0",
    "poetry>=1.8.5",
    "streamlit==1.38.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
]

[project.scripts]
swot = "swot.main:run"
run_crew = "swot.main:run"
train = "swot.main:train"
replay = "swot.main:replay"
test = "swot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

